--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
 body{
-    background-color: #f2f2f2;
+    background-color: #a50000;
+}
+
+div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
